--- a/package.json
+++ b/package.json
@@ -1,23 +1,33 @@
 {
-  "name": "the-blog",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@next/font": "13.1.6",
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.27",
-    "@types/react-dom": "18.0.10",
-    "eslint": "8.33.0",
-    "eslint-config-next": "13.1.6",
-    "next": "13.1.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "4.9.5"
-  }
+    "name": "the-blog",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@next/font": "13.1.6",
+        "@types/node": "18.11.18",
+        "@types/react": "18.0.27",
+        "@types/react-dom": "18.0.10",
+        "eslint": "8.33.0",
+        "eslint-config-next": "13.1.6",
+        "next": "13.1.6",
+        "next-sanity": "^4.1.2",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "typescript": "4.9.5",
+        "@sanity/vision": "^3.0.0",
+        "sanity": "^3.0.0",
+        "styled-components": "^5.2.0"
+    },
+    "devDependencies": {
+        "@sanity/eslint-config-studio": "^2.0.1",
+        "autoprefixer": "^10.4.13",
+        "postcss": "^8.4.21",
+        "tailwindcss": "^3.2.4"
+    }
 }
