--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@heroicons/react": "^2.0.14",
         "@next/font": "13.1.6",
+        "@sanity/vision": "^3.0.0",
         "@types/node": "18.11.18",
         "@types/react": "18.0.27",
         "@types/react-dom": "18.0.10",
@@ -19,10 +21,9 @@
         "next-sanity": "^4.1.2",
         "react": "18.2.0",
         "react-dom": "18.2.0",
-        "typescript": "4.9.5",
-        "@sanity/vision": "^3.0.0",
         "sanity": "^3.0.0",
-        "styled-components": "^5.2.0"
+        "styled-components": "^5.2.0",
+        "typescript": "4.9.5"
     },
     "devDependencies": {
         "@sanity/eslint-config-studio": "^2.0.1",
