--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
         "next-sanity": "^4.1.7",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-icons": "^4.9.0",
         "sanity": "^3.0.0",
+        "sanity-plugin-iframe-pane": "^2.3.1",
         "styled-components": "^5.2.0",
         "typescript": "4.9.5"
     },
