--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "@heroicons/react": "^2.0.14",
         "@next/font": "13.1.6",
+        "@portabletext/react": "^3.0.4",
         "@sanity/vision": "^3.0.0",
         "@types/node": "18.11.18",
         "@types/react": "18.0.27",
@@ -22,6 +23,7 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-icons": "^4.9.0",
+        "react-portable-text": "^0.6.0",
         "sanity": "^3.0.0",
         "sanity-plugin-iframe-pane": "^2.3.1",
         "styled-components": "^5.2.0",
