--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "typescript": "4.9.5"
     },
     "devDependencies": {
+        "@netlify/plugin-nextjs": "^4.29.5-appdir.0",
         "@sanity/eslint-config-studio": "^2.0.1",
         "autoprefixer": "^10.4.13",
         "postcss": "^8.4.21",
